--- a/employees/skyfire.yml
+++ b/employees/skyfire.yml
@@ -1,16 +1,16 @@
 #天火
 #术士-Caster
 
-生命上限-954
-攻击-509
-防御-74
-法术抗性-10
-再部署-慢
-部署费用-30
-阻挡数-1
-攻击速度-慢
+生命上限=954
+攻击=509
+防御=74
+法术抗性=10
+再部署=slow
+部署费用=30
+阻挡数=1
+攻击速度=slow
 
-信赖度-46%
+信赖度=46%
 
 攻击范围{
 XX
